<resources>
    <string name="app_name" translatable="false">VianaOnWheels</string>
    <string name="welcome">Welcome</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout">Logout</string>
    <string name="ticket">Ticket Office</string>
    <string name="schedule">Schedule</string>
    <string name="create_account">Create Account</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="account">Account</string>
    <string name="travel_history">Travel History</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="localization">Localization</string>
    <string name="destiny">Destiny</string>
    <string name="origin">Origin</string>
    <string name="about_us">About us</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="search">Search</string>
    <string name="available_routes">Available Routes</string>
    <string name="email" translatable="false">Email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_email">Send email</string>
    <string name="contact">Contact</string>
    <string name="have_account">Already have an account</string>
    <string name="intercity">Intercity</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="dont_account">Don\'t have an account</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="icities_search">Search</string>
    <string name="icities_origins">Add Origin</string>
    <string name="icities_destination">Add Destination</string>
    <string name="insert_data">Please insert all info to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="pass_required">Password is required</string>
    <string name="minimum_characters">Password must be minimum 8 characters</string>
    <string name="dif_password">Password is not the same</string>
    <string name="exist_email">Invalid email</string>
    <string name="registed">Registed</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="login_message">Please sign in to continue</string>
    <string name="insert_email">Insert the email</string>
    <string name="wrong_cred">Wrong credentials</string>
    <string name="warning">Try again later, sorry</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="hc_date">Date:</string>
    <string name="hc_company">Company</string>
    <string name="hc_origin">Origin</string>
    <string name="hc_destiny">Destination</string>
    <string name="hc_price">Price:</string>
    <string name="hc_hour">Hour:</string>
    <string name="back">Back</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="aboutUs_text">Who we are: Objectives: Motivation:</string>
    <string name="pageAlreadyOpen">You are already in this page!</string>
    <string name="account_deleted">Account successfully deleted!</string>
    <string name="error_deleting">Error on deleting the account!</string>
    <string name="homePage" translatable="false">Home</string>
    <string name="title_activity_maps">Maps</string>
    <string name="ticketQR">QR Code - Bilhete</string>
    <string name="buy_ticket">Buy Tickets</string>
    <string name="tab" translatable="false">\u0009\u0009\u0009\u0009</string>
    <string name="qtd">Qty:</string>
    <string name="precoUnit">Price Unit.:</string>
    <string name="Total_price_buytickets">Total Price:</string>
    <string name="precoLine">Price:</string>
    <string name="carrinho">Shopping Cart</string>
    <string name="semBilhetes">No tickets to buy!</string>
    <string name="compradosSucesso">Tickets successfully purchased!</string>
    <string name="icities_source_date">Go</string>
    <string name="icities_destination_date">Back</string>
    <string name="inter_jovem">Young</string>
    <string name="inter_adultos">Adults</string>
    <string name="inter_senior">Seniors</string>
    <string name="inter_tickets">Select a ticket</string>
    <string name="inter_trip">Select the origin and destination of your trip</string>
    <string name="icities_search_price">Price:</string>
    <string name="icities_search_go">Go Trip</string>
    <string name="icities_search_back">Back Trip</string>
    <string name="icities_search_cart">Cart:</string>
    <string name="icities_search_foward_button">Advance</string>
    <string name="who_text">We are a startup made up of IPVC students</string>
    <string name="objetives_text">Our main objective is help to reduce the ecological footprint generated through transport traffic with our application</string>
    <string name="credits_text">App development: Hugo Costa, Marco Sampaio, Jorge Silva and Vítor Ribeiro</string>
    <string name="who_title">Who we are:</string>
    <string name="objetives_title">Objectives:</string>
    <string name="credits_title">Credits:</string>
    <string name="TicketQR">Ticket - QRcode</string>
    <string name="f_date_hour">Date_Hour</string>
    <string name="f_company">Company</string>
    <string name="f_origin">Origin</string>
    <string name="f_destiny">Destination</string>
    <string name="f_price">Price</string>
    <string name="historic_title">Historic</string>
    <string name="icities_title">Intercities</string>
    <string name="icities_search_titile">Intercities Search</string>
    <string name="icities_datefield">Select a departure date</string>
    <string name="noTicket">Without Tickets To Use!</string>
    <string name="scanner" translatable="false">QR Scanner</string>
</resources>