<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_touse"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/hc_itemlist">

                <TextView
                    android:id="@+id/tv_date_touse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hc_date"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>


                <TextView
                    android:id="@+id/tv_hours_touse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tv_date_touse"
                    android:text="@string/hc_hour"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_company_touse"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_date_touse"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hc_company"
                    android:textColor="@color/black"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/tv_origin_touse"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_company_touse"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hc_origin"
                    android:textColor="@color/black"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/tv_destiny_touse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_company_touse"
                    android:layout_alignRight="@+id/tv_origin_touse"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/hc_destiny"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/tv_price_touse"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_origin_touse"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hc_price"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_priceValue"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_destiny_touse"
                    android:layout_alignRight="@id/tv_price_touse"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="3.80€"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
        </RelativeLayout>

        <ImageView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_touse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_line" />
</RelativeLayout>
