<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Page">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_pageProfil"
        android:layout_marginTop="50dp"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="25dp"
        android:backgroundTint="#CFCFCF"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/profil_image"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="500dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/TV_mainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_below="@id/profil_image"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/TV_mainBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:layout_below="@id/TV_mainName"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/TV_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_below="@id/TV_mainBirth"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/TV_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_below="@id/TV_mail"
            android:layout_margin="20dp"/>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@id/main_pageProfil">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#CFCFCF"
                android:layout_margin="10dp"></androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#CFCFCF"
                android:layout_margin="10dp"></androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#CFCFCF"
                android:layout_margin="10dp"></androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#CFCFCF"
                android:layout_margin="10dp"></androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>