<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/ic_frame_2">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="175dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="50dp"
        />
    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:layout_below="@+id/login_title"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="50dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_email"
        android:layout_width="310dp"
        android:layout_marginStart="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/login_message">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/tv_email"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_email"
                android:layout_marginBottom="3dp"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_email"
                android:layout_marginStart="35dp"
                android:hint="@string/insert_email"
                android:padding="0dp"
                android:textSize="15sp"
                android:textStyle="normal" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_pass"
        android:layout_width="310dp"
        android:layout_marginStart="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/card_email"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_padlock" />

            <ImageView
                android:id="@+id/iv_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_pass"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_line" />

            <Button
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="11sp"
                android:padding="0dp"
                android:layout_marginTop="10dp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_pass"
        app:cardCornerRadius="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/gradient_color">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />




</RelativeLayout>