<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotActivity"
    android:background="@drawable/ic_sign_up">

    <TextView
        android:id="@+id/forgot_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_email_request"
        android:layout_width="310dp"
        android:layout_marginStart="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="130dp"
        android:layout_below="@+id/forgot_title"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_email_request"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_email"/>


            <ImageView
                android:id="@+id/iv_line_email_request"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_email_request"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_line" />


            <EditText
                android:id="@+id/edt_insert_email_request"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/iv_line_email_request"
                android:layout_marginStart="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="0dp"
                android:textSize="15sp"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_email_request"
        app:cardCornerRadius="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/gradient_color">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:text="@string/send_email"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>